--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
                         <div class="team-member" align="center">
                            <figure class="member-photo"><img src="img/team/gitu.jpg" alt="" /></figure>
                               <div class="team-detail">
-                                 <h4><Gitanshu Bhatia></h4>
-                                    <span><Member, Software Team></span>                  
+                                 <h4>Gitanshu Bhatia</h4>
+                                    <span>Member, Software Team</span>                  
                                   </div>
                                </div>
                           </article>
