--- a/index.html
+++ b/index.html
@@ -356,6 +356,15 @@
                   			</div>
                   		</div>
                   	       </article>
+				<article class="col-md-2 isotopeItem software">
+                  		<div class="team-member" align="center">
+                  		   <figure class="member-photo"><img src="img/team/Anubhav.jpg" alt="" /></figure>
+                  			<div class="team-detail">
+                  				<h4>Anubhav Jain</h4>
+                  				<span>Member, Software Team</span>                  
+                  			</div>
+                  		</div>
+                  	       </article>
                            </div>
                         </div>
                      </div>
