--- a/index.html
+++ b/index.html
@@ -365,6 +365,17 @@
                   			</div>
                   		</div>
                   	       </article>
+
+  					<article class="col-md-2 isotopeItem software">
+                  				<div class="team-member" align="center">
+                  				   <figure class="member-photo"><img src="img/team/Swastik.jpg" alt="" /></figure>
+                  				   <div class="team-detail">
+                  				      <h4>Swastik Haldar</h4>
+                  				      <span>Member, Software Team</span>                  
+                  				    </div>
+                  				 </div>
+                  				</article>
+
 				<article class="col-md-2 isotopeItem software">
                   		<div class="team-member" align="center">
                   		   <figure class="member-photo"><img src="img/team/Anubhav.jpg" alt="" /></figure>
