--- a/index.html
+++ b/index.html
@@ -356,11 +356,20 @@
                   			</div>
                   		</div>
                   	       </article>
-                               <article class="col-md-2 isotopeItem software">
+                           <article class="col-md-2 isotopeItem software">
                   		<div class="team-member" align="center">
                   		   <figure class="member-photo"><img src="img/team/Shivang.jpg" alt="" /></figure>
                   			<div class="team-detail">
                   				<h4>Shivang Agrawal</h4>
+                  				<span>Member, Software Team</span>                  
+                  			</div>
+                  		</div>
+                  	       </article>
+                  	       <article class="col-md-2 isotopeItem software">
+                  		<div class="team-member" align="center">
+                  		   <figure class="member-photo"><img src="img/team/Spandan.jpg" alt="" /></figure>
+                  			<div class="team-detail">
+                  				<h4>Spandan Kumar Sahu</h4>
                   				<span>Member, Software Team</span>                  
                   			</div>
                   		</div>
