--- a/index.html
+++ b/index.html
@@ -248,7 +248,6 @@
                      <div class="col-md-12">
                         <div class="row">
                            <div class="portfolio-items isotopeWrapper clearfix" id="4">
-
                               <article class="col-md-2 isotopeItem software">
                                  <div class="team-member" align="center">
                                     <figure class="member-photo"><img src="img/team/Shushman.jpg" alt="" /></figure>
@@ -258,7 +257,6 @@
                                     </div>
                                  </div>
                               </article>
-
                               <article class="col-md-2 isotopeItem software">
                                  <div class="team-member" align="center">
                                     <figure class="member-photo"><img src="img/team/Soumyadeep.jpg" alt="" /></figure>
@@ -268,7 +266,6 @@
                                     </div>
                                  </div>
                               </article>
-
                               <article class="col-md-2 isotopeItem software">
                                  <div class="team-member align-center">
                                     <figure class="member-photo"><img src="img/team/KK.jpg" alt="" /></figure>
@@ -278,7 +275,6 @@
                                     </div>
                                  </div>
                               </article>
-
                               <article class="col-md-2 isotopeItem embedded">
                                  <div class="team-member align-center">
                                     <figure class="member-photo"><img src="img/team/Ayush.00_jpg_srb" alt="" /></figure>
@@ -288,7 +284,6 @@
                                     </div>
                                  </div>
                               </article>
-
                               <article class="col-md-2 isotopeItem embedded">
                                  <div class="team-member" align="center">
                                     <figure class="member-photo"><img src="img/team/Rishal.jpg" alt="" /></figure>
@@ -298,7 +293,6 @@
                                     </div>
                                  </div>
                               </article>
-
                               <article class="col-md-2 isotopeItem software">
                                  <div class="team-member align-center">
                                     <figure class="member-photo"><img src="img/team/Abhinav.jpg" alt="" /></figure>
@@ -308,7 +302,6 @@
                                     </div>
                                  </div>
                               </article>
-
                               <article class="col-md-2 isotopeItem software">
                                  <div class="team-member align-center">
                                     <figure class="member-photo"><img src="img/team/Divyansh.jpg" alt="" /></figure>
@@ -318,7 +311,6 @@
                                     </div>
                                  </div>
                               </article>
-
                               <article class="col-md-2 isotopeItem software">
                                  <div class="team-member align-center">
                                     <figure class="member-photo"><img src="img/team/Roy.jpg" alt="" /></figure>
@@ -328,17 +320,6 @@
                                     </div>
                                  </div>
                               </article>
-
-			      <article class="col-md-2 isotopeItem software">
-                                 <div class="team-member align-center">
-                                    <figure class="member-photo"><img src="img/team/Indresh.jpg" alt="" /></figure>
-                                    <div class="team-detail">
-                                       <h4>Indresh</h4>
-                                       <span>Member, Software Team</span>
-                                    </div>
-                                 </div>
-                              </article>
-                              
                               <article class="col-md-2 isotopeItem software">
                                  <div class="team-member align-center">
                                     <figure class="member-photo"><img src="img/team/Barno.jpg" alt="" /></figure>
@@ -356,17 +337,6 @@
                                        <span>Member, Embedded Team</span>
                                     </div>
                                  </div>
-                              </article>
-
-                              <article class="col-md-2 isotopeItem software">
-                  				<div class="team-member" align="center">
-                  				   <figure class="member-photo"><img src="img/team/Shivang.jpg" alt="" /></figure>
-                  				   <div class="team-detail">
-                  				      <h4>Shivang Agrawal</h4>
-                  				      <span>Member, Software Team</span>                  
-                  				    </div>
-                  				 </div>
-
                                </article>
                                <article class="col-md-2 isotopeItem software">
                                 <div class="team-member" align="center">
@@ -379,14 +349,58 @@
                                </article>
                                <article class="col-md-2 isotopeItem software">
                   		<div class="team-member" align="center">
+                  		   <figure class="member-photo"><img src="img/team/Bauva.jpg" alt="" /></figure>
+                  			<div class="team-detail">
+                  				<h4>Pranit Bauva</h4>
+                  				<span>Member, Software Team</span>                  
+                  			</div>
+                  		</div>
+                  	       </article>
+                           <article class="col-md-2 isotopeItem software">
+                  		<div class="team-member" align="center">
                   		   <figure class="member-photo"><img src="img/team/Shivang.jpg" alt="" /></figure>
                   			<div class="team-detail">
                   				<h4>Shivang Agrawal</h4>
                   				<span>Member, Software Team</span>                  
                   			</div>
                   		</div>
-
                   	       </article>
+                  	       <article class="col-md-2 isotopeItem software">
+                  		<div class="team-member" align="center">
+                  		   <figure class="member-photo"><img src="img/team/Spandan.jpg" alt="" /></figure>
+                  			<div class="team-detail">
+                  				<h4>Spandan Kumar Sahu</h4>
+                  				<span>Member, Software Team</span>                  
+                  			</div>
+                  		</div>
+                  	       </article>
+				<article class="col-md-2 isotopeItem software">
+                  		<div class="team-member" align="center">
+                  		   <figure class="member-photo"><img src="img/team/Anubhav.jpg" alt="" /></figure>
+                  			<div class="team-detail">
+                  				<h4>Anubhav Jain</h4>
+                  				<span>Member, Software Team</span>                  
+                  			</div>
+                  		</div>
+                  	       </article>
+                  	       <article class="col-md-2 isotopeItem software">
+			       <div class="team-member" align="center">
+        			   <figure class="member-photo"><img src="img/team/Amegh.jpg" alt="" /></figure>
+					 <div class="team-detail">
+            					<h4>Amegh Bhavsar</h4>
+            					<span>Member, Software Team</span>                  
+        				 </div>
+    				</div>
+    				</article>
+<article class="col-md-2 isotopeItem software">
+	<div class="team-member" align="center">
+		<figure class="member-photo"><img src="img/team/Indresh.jpg" alt="" /></figure>
+		<div class="team-detail">
+			<h4>Indresh</h4>
+			<span>Member, Software Team</span>					
+		</div>
+	</div>
+    </article>
                            </div>
                         </div>
                      </div>
