--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                                     <figure class="member-photo"><img src="img/team/Soumyadeep.jpg" alt="" /></figure>
                                     <div class="team-detail">
                                        <h4>Soumyadeep Mukherjee</h4>
-                                       <span>Project Head</span>
+                                       <span>Alumnus (Project Head)</span>
                                     </div>
                                  </div>
                               </article>
@@ -271,16 +271,7 @@
                                     <figure class="member-photo"><img src="img/team/KK.jpg" alt="" /></figure>
                                     <div class="team-detail">
                                        <h4>Kumar Krishna Agarwal</h4>
-                                       <span>Head, Software Team</span>
-                                    </div>
-                                 </div>
-                              </article>
-                              <article class="col-md-2 isotopeItem embedded">
-                                 <div class="team-member align-center">
-                                    <figure class="member-photo"><img src="img/team/Ayush.00_jpg_srb" alt="" /></figure>
-                                    <div class="team-detail">
-                                       <h4>Ayush Pandey</h4>
-                                       <span>Head, Embedded Team</span>
+                                       <span>Project Head</span>
                                     </div>
                                  </div>
                               </article>
@@ -289,7 +280,25 @@
                                     <figure class="member-photo"><img src="img/team/Rishal.jpg" alt="" /></figure>
                                     <div class="team-detail">
                                        <h4>Rishal Raj</h4>
-                                       <span>Head, Embedded Team</span>
+                                       <span>Project Head</span>
+                                    </div>
+                                 </div>
+                              </article>
+		                      <article class="col-md-2 isotopeItem embedded">
+                                 <div class="team-member align-center">
+                                    <figure class="member-photo"><img src="img/team/Ayush.00_jpg_srb" alt="" /></figure>
+                                    <div class="team-detail">
+                                       <h4>Ayush Pandey</h4>
+                                       <span>Member, Embedded Team</span>
+                                    </div>
+                                 </div>
+			                  </article>
+                              <article class="col-md-2 isotopeItem software">
+                                 <div class="team-member align-center">
+                                    <figure class="member-photo"><img src="img/team/Roy.jpg" alt="" /></figure>
+                                    <div class="team-detail">
+                                       <h4>Mayank Roy</h4>
+                                       <span>Head, Software Team</span>
                                     </div>
                                  </div>
                               </article>
@@ -298,7 +307,7 @@
                                     <figure class="member-photo"><img src="img/team/Abhinav.jpg" alt="" /></figure>
                                     <div class="team-detail">
                                        <h4>Abhinav Jain</h4>
-                                       <span>Member, Software Team</span>
+                                       <span>Head, Software Team</span>
                                     </div>
                                  </div>
                               </article>
@@ -307,15 +316,6 @@
                                     <figure class="member-photo"><img src="img/team/Divyansh.jpg" alt="" /></figure>
                                     <div class="team-detail">
                                        <h4>Divyansh Gupta</h4>
-                                       <span>Member, Software Team</span>
-                                    </div>
-                                 </div>
-                              </article>
-                              <article class="col-md-2 isotopeItem software">
-                                 <div class="team-member align-center">
-                                    <figure class="member-photo"><img src="img/team/Roy.jpg" alt="" /></figure>
-                                    <div class="team-detail">
-                                       <h4>Mayank Roy</h4>
                                        <span>Member, Software Team</span>
                                     </div>
                                  </div>
@@ -334,7 +334,7 @@
                                     <figure class="member-photo"><img src="img/team/Ankit.jpg" alt="" /></figure>
                                     <div class="team-detail">
                                        <h4>Kumar Ankit</h4>
-                                       <span>Member, Embedded Team</span>
+                                       <span>Head, Embedded Team</span>
                                     </div>
                                  </div>
                                </article>
@@ -414,7 +414,7 @@
                               <h2 class="section-heading animated" data-animation="bounceInUp">Contact Us</h2>
                               Contacts:
                               <p>
-                                 <b>Soumyadeep Mukherjee</b> - <a class="tweak" href="mailto:soumyadeep.mukherjee@iitkgp.ac.in">soumyadeep.mukherjee [at] iitkgp.ac.in</a>
+                                 <b>Swarm IIT Kharagpur</b> - <a class="tweak" href="mailto:sswarmiitkgp@gmail.com">swarmiitkgp [at] gmail.com</a>
                               </p>
                            </div>
                         </div>
