--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                <!-- BASICS -->
                <meta charset="utf-8">
                <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-               <link rel="icon" type="image/png" href="http://swarm-iitkgp.github.io/favicon-16x16.png">
+               <link rel="icon" type="image/png" href="http://swarm-iitkgp.github.io/favicon.ico">
                <title>Swarm IIT Kharagpur</title>
                <meta name="description" content="">
                <meta name="viewport" content="width=device-width, initial-scale=1.0">
