logo: add swarm's logo
Signed-off-by: Pranit Bauva <pranit@bauva.com>

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <div class="row mar-bot40">
                            <div class="col-md-6 col-md-offset-3">
                               <div class="align-center">
-                                 <i class="fa fa-flask fa-5x mar-bot20"></i>
+                                 <img src="swarm.png">
                                  <h2 class="slogan">IIT-KGP </h2>
                                  <h2 class="slogan-new">Swarm Robotics</h2>
                                  <h2 class="slogan">Group</h2>
