team: welcome to the team Pathak
Signed-off-by: Pranit Bauva <pranit@bauva.com>

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                                     </div>
                                  </div>
                               </article>
-		                      <article class="col-md-2 isotopeItem embedded">
+		              <article class="col-md-2 isotopeItem embedded">
                                  <div class="team-member align-center">
                                     <figure class="member-photo"><img src="img/team/Ayush.00_jpg_srb" alt="" /></figure>
                                     <div class="team-detail">
@@ -292,7 +292,7 @@
                                        <span>Member, Embedded Team</span>
                                     </div>
                                  </div>
-			                  </article>
+			      </article>
                               <article class="col-md-2 isotopeItem software">
                                  <div class="team-member align-center">
                                     <figure class="member-photo"><img src="img/team/Roy.jpg" alt="" /></figure>
@@ -392,6 +392,15 @@
         				 </div>
     				</div>
     				</article>
+				 <article class="col-md-2 isotopeItem embedded">
+                                 <div class="team-member align-center">
+                                    <figure class="member-photo"><img src="img/team/Pathak.jpg" alt="" /></figure>
+                                    <div class="team-detail">
+                                       <h4>Amit Pathak</h4>
+                                       <span>Member, Embedded Team</span>
+                                    </div>
+                                 </div>
+			      </article>
                            </div>
                         </div>
                      </div>
