--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                               </article>
 		              <article class="col-md-2 isotopeItem embedded">
                                  <div class="team-member align-center">
-                                    <figure class="member-photo"><img src="img/team/Ayush.00_jpg_srb" alt="" /></figure>
+                                    <figure class="member-photo"><img src="img/team/Ayush.jpg" alt="" /></figure>
                                     <div class="team-detail">
                                        <h4>Ayush Pandey</h4>
                                        <span>Member, Embedded Team</span>
