--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                   			</div>
                                   </div>
                                </article>
-                           <article class="col-md-2 isotopeItem software">
+                               <article class="col-md-2 isotopeItem software">
                   		<div class="team-member" align="center">
                   		   <figure class="member-photo"><img src="img/team/Shivang.jpg" alt="" /></figure>
                   			<div class="team-detail">
@@ -365,6 +365,15 @@
                   			</div>
                   		</div>
                   	       </article>
+			       <article class="col-md-2 isotopeItem embedded">
+			       <div class="team-member" align="center">
+        			   <figure class="member-photo"><img src="img/team/Aman.jpg" alt="" /></figure>
+					 <div class="team-detail">
+            					<h4>Aman Chandra</h4>
+            					<span>Member, Embedded Team</span>                  
+        				 </div>
+    				</div>
+    			       </article>
                   	       <article class="col-md-2 isotopeItem software">
                   		<div class="team-member" align="center">
                   		   <figure class="member-photo"><img src="img/team/Spandan.jpg" alt="" /></figure>
