--- a/recruit.html
+++ b/recruit.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url=http://goo.gl/forms/8HmQ2889ka"/>
+<meta http-equiv="Refresh" content="0; url=https://goo.gl/forms/VXmxAtW2VkG86wWU2"/>
