--- a/index.html
+++ b/index.html
@@ -338,6 +338,15 @@
                                     </div>
                                  </div>
                                </article>
+                               <article class="col-md-2 isotopeItem embedded">
+                                 <div class="team-member" align="center">
+                                    <figure class="member-photo"><img src="img/team/ArkaSourav.jpg" alt="" /></figure>
+                                    <div class="team-detail">
+                                       <h4>Arka Sourav</h4>
+                                       <span>Member, Embedded Team</span>
+                                    </div>
+                                 </div>
+                               </article>
                                <article class="col-md-2 isotopeItem software">
                                 <div class="team-member" align="center">
                                    <figure class="member-photo"><img src="img/team/Srishti.jpg" alt="" /></figure>
