--- a/index.html
+++ b/index.html
@@ -419,6 +419,15 @@
                                     </div>
                                  </div>
 			      </article>
+			      <article class="col-md-2 isotopeItem software">
+			        <div class="team-member" align="center">
+				  <figure class="member-photo"><a href="http://www.github.com/americast"><img src="img/team/Sayan.jpg" alt="" /></a></figure>
+				  <div class="team-detail">
+				    <h4>Sayan Sinha</h4>
+				    <span>Member, Software Team</span>                  
+				  </div>
+				</div>
+			      </article>			      
                            </div>
                         </div>
                      </div>
