--- a/index.html
+++ b/index.html
@@ -400,6 +400,15 @@
                   				<span>Member, Software Team</span>                  
                   			</div>
                   		</div>
+                </article>
+                	<article class="col-md-2 isotopeItem software">
+                  		<div class="team-member" align="center">
+                  		   <figure class="member-photo"><img src="img/team/Vishal.jpg" alt="" /></figure>
+                  			<div class="team-detail">
+                  				<h4>Vishal Gupta</h4>
+                  				<span>Member, Software Team</span>                  
+                  			</div>
+                  		</div>
                   	       </article>
                   	       <article class="col-md-2 isotopeItem software">
 			       <div class="team-member" align="center">
