--- a/index.html
+++ b/index.html
@@ -419,6 +419,16 @@
                                     </div>
                                  </div>
 			      </article>
+				   
+				   <article class="col-md-2 isotopeItem software">
+    					<div class="team-member" align="center">
+						 <figure class="member-photo"><img src="img/team/akshat2.jpg" alt="" /></figure>
+						 <div class="team-detail">
+						  <h4>Akshat Pandya</h4>
+						 <span>Member, Software Team</span>                  
+						 </div>
+					 </div>
+				   </article>
                            </div>
                         </div>
                      </div>
