--- a/index.html
+++ b/index.html
@@ -440,6 +440,16 @@
                                  </div>
                               </article>
 
+				<article class="col-md-2 isotopeItem software">
+    				 <div class="team-member" align="center">
+        			  <figure class="member-photo"><img src="img/team/vedic.jpg" alt="" /></figure>
+        			 	<div class="team-detail">
+            					<h4>Vedic Partap</h4>
+            					<span>Member , Software Team</span>                  
+        				</div>
+    				 </div>
+    				</article>
+
 			      <article class="col-md-2 isotopeItem software">
 			        <div class="team-member" align="center">
 				  <figure class="member-photo"><a href="http://www.github.com/americast"><img src="img/team/Sayan.jpg" alt="" /></a></figure>
