--- a/index.html
+++ b/index.html
@@ -428,7 +428,16 @@
                                     </div>
                                  </div>
 			      </article>
-
+			
+			      <article class="col-md-2 isotopeItem software">
+                                 <div class="team-member" align="center">
+                                    <figure class="member-photo"><img src="img/team/Rajdeep.jpg" alt="" /></figure>
+                                    <div class="team-detail">
+                                       <h4>Rajdeep Choudhury</h4>
+                                       <span>Member, Software Team</span>             
+                                    </div>
+                                 </div>
+                              </article>
 
                               <article class="col-md-2 isotopeItem software">
                                  <div class="team-member" align="center">
