--- a/index.html
+++ b/index.html
@@ -460,6 +460,16 @@
 				</div>
 			      </article>			      
 
+      <article class="col-md-2 isotopeItem embedded">
+			        <div class="team-member" align="center">
+				  <figure class="member-photo"><a href="http://www.github.com/ankita132"><img src="img/team/ankita.jpg" alt="" /></a></figure>
+				  <div class="team-detail">
+				    <h4>Ankita Sahoo</h4>
+				    <span>Member, Embedded Team</span>                  
+				  </div>
+				</div>
+			      </article>
+
                            </div>
                         </div>
                      </div>
