add Sree Theerdha's details

--- a/index.html
+++ b/index.html
@@ -471,6 +471,16 @@
 				  </div>
 				</div>
 			      </article>
+			      
+			       <article class="col-md-2 isotopeItem software">
+			        <div class="team-member" align="center">
+				  <figure class="member-photo"><a href="http://www.github.com/theerdha"><img src="img/team/theerdha.jpg" alt="" /></a></figure>
+				  <div class="team-detail">
+				    <h4>Sree Theerdha</h4>
+				    <span>Member, Software Team</span>                  
+				  </div>
+				</div>
+			      </article>
 
                            </div>
                         </div>
