--- a/index.html
+++ b/index.html
@@ -392,6 +392,16 @@
                   			</div>
                   		</div>
                 </article>
+			
+			<article class="col-md-2 isotopeItem software">
+			       <div class="team-member" align="center">
+        			   <figure class="member-photo"><img src="img/team/Vishesh.jpg" alt="" /></figure>
+					 <div class="team-detail">
+            					<h4>Vishesh Agarwal</h4>
+            					<span>Member, Software Team</span>                  
+        				 </div>
+    				</div>
+    			</article>
                 	<article class="col-md-2 isotopeItem software">
                   		<div class="team-member" align="center">
                   		   <figure class="member-photo"><img src="img/team/Vishal.jpg" alt="" /></figure>
