--- a/index.html
+++ b/index.html
@@ -505,6 +505,15 @@
 				</div>
 			      </article>
 
+<article class="col-md-2 isotopeItem software">
+    <div class="team-member" align="center">
+        <figure class="member-photo"><img src="img/team/Muskaan.jpg" alt="" /></figure>
+        <div class="team-detail">
+            <h4>Muskaan Jain</h4>
+            <span>Member , Software Team</span>
+        </div>
+    </div>
+</article>
                            </div>
                         </div>
                      </div>
