--- a/index.html
+++ b/index.html
@@ -528,6 +528,15 @@
         </div>
     </div>
 </article>
+				<article class="col-md-2 isotopeItem embedded">
+   				 <div class="team-member" align="center">
+   				     <figure class="member-photo"><img src="img/team/Siddhartha.jpg" alt="" /></figure>
+    					<div class="team-detail">
+         					   <h4>Siddhartha Kapuria</h4>
+        					   <span>Member , Embedded Team</span>
+      					</div>
+    				 </div>
+				</article>
                            </div>
                         </div>
                      </div>
