--- a/index.html
+++ b/index.html
@@ -528,6 +528,15 @@
         </div>
     </div>
 </article>
+				  <article class="col-md-2 isotopeItem <Team>">
+	<div class="team-member" align="center">
+		<figure class="member-photo"><img src="img/team/IMG_0022.jpg" alt="" /></figure>
+		<div class="team-detail">
+			<h4>Rishikant Rajpoot</h4>
+			<span>member ,embedded team</span>					
+		</div>
+	</div>
+    </article>
                            </div>
                         </div>
                      </div>
