--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                                     <figure class="member-photo"><img src="img/team/KK.jpg" alt="" /></figure>
                                     <div class="team-detail">
                                        <h4>Kumar Krishna Agarwal</h4>
-                                       <span>Project Head</span>
+                                       <span>Alumnus</span>
                                     </div>
                                  </div>
                               </article>
@@ -280,7 +280,7 @@
                                     <figure class="member-photo"><img src="img/team/Rishal.jpg" alt="" /></figure>
                                     <div class="team-detail">
                                        <h4>Rishal Raj</h4>
-                                       <span>Project Head</span>
+                                       <span>Alumnus</span>
                                     </div>
                                  </div>
                               </article>
@@ -289,7 +289,7 @@
                                     <figure class="member-photo"><img src="img/team/Roy.jpg" alt="" /></figure>
                                     <div class="team-detail">
                                        <h4>Mayank Roy</h4>
-                                       <span>Head, Software Team</span>
+                                       <span>Project Head</span>
                                     </div>
                                  </div>
                               </article>
@@ -307,7 +307,7 @@
                   		   <figure class="member-photo"><img src="img/team/Bauva.jpg" alt="" /></figure>
                   			<div class="team-detail">
                   				<h4>Pranit Bauva</h4>
-                  				<span>Member, Software Team</span>                  
+                  				<span>Head, Software Team</span>                  
                   			</div>
                                   </div>
                                </article>
@@ -316,7 +316,7 @@
                   		   <figure class="member-photo"><img src="img/team/Shivang.jpg" alt="" /></figure>
                   			<div class="team-detail">
                   				<h4>Shivang Agrawal</h4>
-                  				<span>Member, Software Team</span>                  
+                  				<span>Head, Software Team</span>                  
                   			</div>
                   		</div>
                   	       </article>
@@ -325,7 +325,7 @@
         			   <figure class="member-photo"><img src="img/team/Aman.jpg" alt="" /></figure>
 					 <div class="team-detail">
             					<h4>Aman Chandra</h4>
-            					<span>Member, Embedded Team</span>                  
+            					<span>Head, Embedded Team</span>                  
         				 </div>
     				</div>
     			       </article>
@@ -334,7 +334,7 @@
                   		   <figure class="member-photo"><img src="img/team/Spandan.jpg" alt="" /></figure>
                   			<div class="team-detail">
                   				<h4>Spandan Kumar Sahu</h4>
-                  				<span>Member, Software Team</span>                  
+                  				<span>Head, Software Team</span>                  
                   			</div>
                   		</div>
                   	       </article>
@@ -361,7 +361,7 @@
         			   <figure class="member-photo"><img src="img/team/Amegh.jpg" alt="" /></figure>
 					 <div class="team-detail">
             					<h4>Amegh Bhavsar</h4>
-            					<span>Member, Software Team</span>                  
+            					<span>Head, Software Team</span>                  
         				 </div>
     				</div>
     				</article>
@@ -370,7 +370,7 @@
                                     <figure class="member-photo"><img src="img/team/Pathak.jpg" alt="" /></figure>
                                     <div class="team-detail">
                                        <h4>Amit Pathak</h4>
-                                       <span>Member, Embedded Team</span>
+                                       <span>Head, Embedded Team</span>
                                     </div>
                                  </div>
 
@@ -397,11 +397,6 @@
                                     </div>
                                  </div>
 			      </article>   
-					
-				
-
-
-
                               <article class="col-md-2 isotopeItem software">
                                  <div class="team-member" align="center">
                                     <figure class="member-photo"><img src="img/team/akshat.jpg" alt="" /></figure>
@@ -411,8 +406,6 @@
                                     </div>
                                  </div>
                               </article>
-
-
                                <article class="col-md-2 isotopeItem software">
                                  <div class="team-member" align="center">
                                     <figure class="member-photo"><img src="img/team/moin.jpg" alt="" /></figure>
@@ -422,8 +415,6 @@
                                     </div>
                                  </div>
                               </article>
-
-
 				<article class="col-md-2 isotopeItem software">
     				 <div class="team-member" align="center">
         			  <figure class="member-photo"><img src="img/team/vedic.jpg" alt="" /></figure>
